Changelog
=========

1.1.0 (unreleased)
------------------

- Add new notice types: ``AMON_NU_EM_COINC``, ``ICECUBE_CASCADE``.
 [Volodymyr Savchenko]

1.0.2 (2020-03-05)
------------------

- Fix incorrect license filename in setup.cfg. [Leo Singer]

1.0.1 (2020-03-05)
------------------

- Add new notice type: ``LVC_EARLY_WARNING``. [Leo Singer]

- Update license to GPL-3+. [Leo Singer]

1.0.0 (2020-01-29)
------------------

- The ``gcn.listen`` method can now cycle through a list of remote hosts when
  re-establishing the connection to GCN. [Varun Bhalerao, Aaron Jones]

- Add new notice types: ``AGILE_MCAL_ALERT``, ``GWHEN_COINC``. [Leo Singer]

0.1.20 (2019-02-12)
-------------------

- Add new notice types: ``HAWC_BURST_MONITOR``, ``ICECUBE_ASTROTRACK_GOLD``,
  and ``ICECUBE_ASTROTRACK_BRONZE``. [Vladimir Savchenko]

0.1.19 (2019-02-12)
-------------------

- Add the ``LVC_RETRACTION`` notice type. [Leo Singer]

0.1.18 (2018-12-11)
-------------------

- Add ``{http://telescope-networks.org/xml/Transport/v1.1}Transport`` and
  ``{http://telescope-networks.org/schema/Transport/v1.1}Transport`` as
  recognized VOEvent Transport Protocol namespaces to support the 4pisky and
  comet brokers. [reported by Martin Dyer]

0.1.17 (2018-10-04)
-------------------

- Add missing dependency on six. [Leo Singer]

- Fix handling of payload command line arguments for pygcn-server.
  Thanks go out to WeiKang Zheng of UC Berkeley for reporting this.
  [Leo Singer]

0.1.16 (2018-03-03)
-------------------

- Add ``functools.wraps()`` to handler decorators so that the original
  function docstrings are preserved. [Leo Singer]

0.1.15 (2018-02-10)
-------------------

- Update module __all__ variables for convenience. [Leo Singer]

- Add experimental PEP 435 style enum class, ``gcn.NoticeType``. [Leo Singer]

0.1.14 (2018-02-01)
-------------------

- Depend unconditionally on lxml. Some of the examples depend on it because