@@ -1,11 +1,10 @@
 sudo: false
 language: python
 python:
-  - "2.7"
-  - "3.5"
   - "3.6"
   - "3.7"
   - "3.8"
+  - "3.9"
 before_install:
   - pip install pytest-pep8
 install: python setup.py build
