@@ -26,11 +26,10 @@ classifiers =
     Intended Audience :: Science/Research
     License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
     Operating System :: POSIX
-    Programming Language :: Python :: 2.7
-    Programming Language :: Python :: 3.5
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
     Topic :: Internet
     Topic :: Scientific/Engineering :: Astronomy
 project_urls =
@@ -41,7 +40,6 @@ project_urls =
 packages = find:
 install_requires =
     lxml
-    six
 tests_require =
     pytest
 
